objects/Request_Member__c.object
<CustomObject>
    <fields>
        <fullName>Collaboration_Id__c</fullName>
        <label>Collaboration Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Request Members</relationshipLabel>
        <relationshipName>Request_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Collaboration_Request__c</fullName>
        <label>External Collaboration Request</label>
        <referenceTo>External_Collaboration_Request__c</referenceTo>
        <relationshipLabel>Request Members</relationshipLabel>
        <relationshipName>Request_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Member_Email__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)), Contact__r.Email, IF(NOT(ISBLANK(User__c)), User__r.Email, IF(OR(Participant__r.RecordType.DeveloperName = &quot;Staff&quot;,Participant__r.RecordType.DeveloperName = &quot;User&quot;),  Participant__r.advpm__Staff__r.Email, Participant__r.advpm__Contact__r.Email ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <formula>IF(NOT(ISBLANK(Participant__c)), Participant__r.Id,  IF(NOT(ISBLANK(User__c)), User__r.Id, Contact__r.Id))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),  Contact__r.FirstName + &apos; &apos;+Contact__r.LastName, IF(NOT(ISBLANK(User__c)), User__r.FirstName + &apos; &apos;+User__r.LastName,  Participant__r.Name ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Type__c</fullName>
        <label>Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Participant</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <referenceTo>advpm__Participant__c</referenceTo>
        <relationshipLabel>Request Members</relationshipLabel>
        <relationshipName>Request_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Request Member</label>
    <nameField>
        <displayFormat>RM-{0}</displayFormat>
        <label>Request Member #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>